Java 17 and JUnit5 (#71)
* Changed to Junit5
* Updated Maven Wrapper
* Code cleanup
* Switched to Java 17 and added marshaller builder